// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WhyPaused should pause reason with message 1`] = `
<LocalizationProvider
  bundles={Array []}
>
  <div
    aria-live="polite"
    className="pane why-paused"
  >
    <div>
      <div
        className="info icon"
      >
        <AccessibleImage
          className="info"
        />
      </div>
      <div
        className="pause reason"
      >
        <div>
          <Localized
            id="whypaused-breakpoint"
          />
        </div>
        <div
          className="message"
        >
          bla is hit
        </div>
      </div>
    </div>
  </div>
</LocalizationProvider>
`;

exports[`WhyPaused should show an empty div when there is no pause reason 1`] = `
<LocalizationProvider
  bundles={Array []}
>
  <div
    aria-live="polite"
    className="pane why-paused hidden"
  />
</LocalizationProvider>
`;

exports[`WhyPaused should show pause reason with exception details 1`] = `
<LocalizationProvider
  bundles={Array []}
>
  <div
    aria-live="polite"
    className="pane why-paused"
  >
    <div>
      <div
        className="info icon"
      >
        <AccessibleImage
          className="info"
        />
      </div>
      <div
        className="pause reason"
      >
        <div>
          <Localized
            id="whypaused-exception"
          />
        </div>
        <div
          className="message error"
        >
          ReferenceError: o is not defined
        </div>
      </div>
    </div>
  </div>
</LocalizationProvider>
`;

exports[`WhyPaused should show pause reason with exception string 1`] = `
<LocalizationProvider
  bundles={Array []}
>
  <div
    aria-live="polite"
    className="pane why-paused"
  >
    <div>
      <div
        className="info icon"
      >
        <AccessibleImage
          className="info"
        />
      </div>
      <div
        className="pause reason"
      >
        <div>
          <Localized
            id="whypaused-exception"
          />
        </div>
        <div
          className="message error"
        >
          Not Available
        </div>
      </div>
    </div>
  </div>
</LocalizationProvider>
`;
